<resources>
    <string name="app_name">NuBai Condutor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="editprofile">EditProfile</string>
    <string name="profile">Profile</string>
    <string name="fname">FIRST NAME</string>
    <string name="lname">LAST NAME</string>
    <string name="phone">MOBILE</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="repassword">CONFIRM PASSWORD</string>
    <string name="cash_payment">Please collect cash from Rider.</string>
    <string name="payment_successfully">Payment completed successfully.</string>
    <string name="googleapikey1">AIzaSyBaIWBWZUTIo2zif0UQDpHlT2C7MJxrfCM</string>
    <string name="googleprojectid">915598348361</string>
    <string name="rider_has_cancelled_trip">Rider has cancelled the Trip.</string>
    <string name="trip_cancelled">Trip has cancelled.</string>
    <string name="version">v2.1.1</string>
    <string name="LiveUrl">http://35.160.185.249/Taxi/index.php/</string>
    <string name="LiverUrlCategory">http://35.160.185.249/Taxi/index.php/categoryapi/</string>
    <string name="LiveUrl1">http://54.70.88.88/users/</string>
    <string name="LiveUrl2">http://54.70.88.88/administrator/</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_payment_details">PaymentDetailsActivity</string>
    <string name="title_activity_scanactivity">SacnActivity</string>
    <string name="select"></string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_slidemain">SlideMainActivity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="xlistview_header_hint_normal">Swipe down</string>
    <string name="xlistview_header_hint_ready">Swipe down</string>
    <string name="xlistview_header_hint_loading"></string>
    <string name="xlistview_header_last_time"></string>
    <string name="xlistview_footer_hint_normal"></string>
    <string name="xlistview_footer_hint_ready"></string>
    <string-array name="profile_list">
        <item>     Profile  </item>
        <item>     Trip History  </item>
        <item>     Rating  </item>
        <item>     Logout  </item>
        
        <item>     Share  </item>
        <item>     Deactivate  </item>
        <item>     Support </item>

    </string-array>
    <string name="brainfirstname">First Name</string>
    <string name="brainlastname">Last Name</string>
    <string name="braindob">DOB</string>
    <string name="brainaddress">Address</string>
    <string name="brainaccount">Account No</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_fname">Enter your first name</string>
    <string name="err_msg_fnamenum">Numbers and Special char. are not Accepted</string>
    <string name="err_msg_lname">Enter your last name</string>
    <string name="err_msg_dob">Enter the Date of Birth</string>
    <string name="err_msg_address">Enter the Address</string>
    <string name="err_msg_account">Enter the Account</string>
    <string name="err_msg_region">Enter the Region</string>
    <string name="err_msg_locality">Enter the Locality</string>
    <string name="err_msg_postal">Enter the Postal</string>
    <string name="err_msg_routing">Enter the Routing</string>
    <string name="err_msg_paypal">Enter the Paypal email id</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="CreditCardNumberHelp">Enter credit or debit card number</string>
    <string name="ExpirationDateHelp">Expiration date (MM/DD)</string>
    <string name="SecurityCodeHelp">Security code</string>
    <string name="ZipHelp">Zip code of billing address</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_resetpassword">Resetpassword</string>
    <string name="title_activity_touch">TouchActivity</string>
    <string name="title_activity_fare">FareActivity</string>
    <string name="title_activity_go_online">GoOnlineActivity</string>
    <string name="title_activity_trip_bill">TripBillActivity</string>
    <string name="title_activity_doc_upload">DocUploadActivity</string>
    <string name="title_activity_comming_soon">CommingSoonActivity</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="Rider_notshown">Rider not-shown</string>
    <string name="request_canceled">Rider request cancelled</string>
    <string name="Wrong_Address">Wrong Address</string>
    <string name="Other">Other</string>
    <string name="reason_cancel">Enter Your reason for cancel</string>
    <string name="Cancel_trip">Don\'t Cancel trip</string>
    <string name="Cancel">Cancel</string>
    <string name="Next">Next</string>
    <string name="Add_id_proof">Add/Edit Registration Certificate</string>
    <string name="car_name">Enter your car name</string>
    <string name="Add_Licence">Add/Edit ID Proof</string>
    <string name="Upload_Documents">Upload Documents</string>
    <string name="Done">Done</string>
    <string name="PROFILE">Profile</string>
    <string name="Last_Name">LAST NAME</string>
    <string name="Mobile">MOBILE</string>
    <string name="Password">password</string>
    <string name="Account">Account</string>
    <string name="Email">EMAIL</string>
    <string name="PayPal_Email">PayPal Email</string>
    <string name="First_Name">FIRST NAME</string>
    <string name="Fare_Summary">Fare Summary</string>
    <string name="hire_me_card">HIRE ME CARD</string>
    <string name="Amount_be_paid">Amount to be paid</string>
    <string name="douler">$00.00</string>
    <string name="star_rate_rider">Your star rate from rider</string>
    <string name="Fare_Review">Fare Review</string>
    <string name="Go_Map">Go to Map</string>
    <string name="Go_Offline">Go Offline</string>
    <string name="recieved_cash">RECEIVED CASH</string>
    <string name="Trip_id">Trip ID</string>
    <string name="Driver_ID">Driver ID</string>
    <string name="Pickup_Location">Pickup Location</string>
    <string name="Drop_Location">Drop Location</string>
    <string name="Date_Time">Date Time</string>
    <string name="Total_Distance">Total Distance</string>
    <string name="Charge">Charge</string>
    <string name="Waiting_Charge">Waiting Charge</string>
    <string name="Tax">Tax</string>
    <string name="Total">Total</string>
    <string name="arcane">A R C A N E</string>
    <string name="Go_Online">Go Online</string>
    <string name="You_Offline">You are Offline</string>
    <string name="vehicle">vehicle</string>
    <string name="SIGN_IN">Sign In</string>
    <string name="REGISTER">Register</string>
    <string name="Arcane">Arcane</string>
    <string name="signout">signout</string>
    <string name="Trip_History">Trip History</string>
    <string name="LINK_PAYMENT">Link Payment</string>
    <string name="New_Password">NEW PASSWORD</string>
    <string name="Old_Password">OLD PASSWORD</string>
    <string name="Confirm_password">CONFIRM PASSWORD</string>
    <string name="Promo">Promo</string>
    <string name="ADD_CREDIT_CARD">ADD A CREDIT CARD</string>
    <string name="SELECT_PAYMENT">Select Payment</string>
    <string name="creating_UBER_Account">By creating an UBER Account you agree to the</string>
    <string name="Creditcard_avilable_for_international">Add a Credit card is available for international Cardholder\'s only</string>
    <string name="Conditions_and_Privacy_Policy"><![CDATA[Terms & Conditions and Privacy Policy]]></string>
    <string name="CANCEL">Cancel</string>
    <string name="number">1234 5678 9012 3456</string>
    <string name="Expiry_Date">Expiry Date</string>
    <string name="scan_card">scan your card</string>
    <string name="CVV">CVV</string>
    <string name="Edit">Edit</string>
    <string name="Back">Back</string>
    <string name="CREATE_ACCOUNT">Create an Account</string>
    <string name="email_id_and_mobilenumber_to_send_ride">We use your email id and mobile number to send ride confirmation and receipt.</string>
    <string name="Email_Address">Email Address</string>
    <string name="RESET_PASSWORD">Reset Password</string>
    <string name="FORGOT_PASSWORD">Forget Password</string>
    <string name="email_address_and_well_send_you">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="VERIFY_PROFILE">Verify Profile</string>
    <string name="paypal_Email_Address">paypal Email Address</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="NEXT">Next</string>
    <string name="Scan_creditcard_with_card.io">Scan a credit card with card.io</string>
    <string name="Loading">Loading</string>
    <string name="Loading1">Please wait</string>
    <string name="Medium_Text">Medium Text</string>
    <string name="Touch_accept">Touch in 30 to accept</string>
    <string name="RIDER_PICKUP_LOCATION">Rider Pickup Location</string>
    <string name="Rider_location">Rider location</string>
    <string name="Address">Address</string>
    <string name="Driver_Name">Driver Name</string>
    <string name="Arriving_Now">Arriving Now</string>
    <string name="begin_trip">Begin Trip</string>
    <string name="begin_trip1">BeginTrip</string>
    <string name="end_trip">End Trip</string>
    <string name="account">Account</string>
    <string name="driver_cancel_request">Driver Cancel Request</string>
    <string name="end_the_trip">Do you want to end the trip?</string>
    <string name="begin_trip2">Begin Trip2</string>
    <string name="network_error">Network Connection Error...</string>
    <string name="please_connect">There is no network please connect</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bt_title_accept">Accept</string>
    <string name="bt_title_decline">Decline</string>
    <string name="RobotoCondensed">RobotoCondensed-Regular.otf</string>
    <string name="buttom_fonts">SFUIDisplay-Regular.otf</string>
    <string name="client_reached_destination">Client reached destination?</string>
    <string name="restore_your_password_via_email">*RESTORE YOUR PASSWORD VIA EMAIL</string>
    <string name="via_email">VIA EMAIL</string>
    <string name="feedback">FEEDBACK</string>
    <string name="submit">Submit</string>
    <string name="thanks_for">Thanks For</string>
    <string name="driving_with_free_bree">Driving with free bree</string>
    <string name="please_rate_your_feedback_below">Please rate your feedback below</string>
    <string name="add_a_note_optional">Add A Note(Optional)</string>
    <string name="add_nnote">Add Note</string>
    <string name="client_picked_up">Client picked-up?</string>
</resources>