<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

    <com.custom.BTextView
        android:id="@+id/v_pickuploaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/client_reached_destination"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:btextfont="@string/RobotoCondensed" />

    <com.custom.BButton
        android:id="@+id/rv_bt_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/yellow_color"
        android:text="@string/yes"
        android:textColor="@color/blue_color"
        app:btextfont="@string/RobotoCondensed" />

    <com.custom.BButton
        android:id="@+id/rv_bt_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_gray2"
        android:text="@string/no"
        android:textColor="@color/blue_color"
        app:btextfont="@string/RobotoCondensed" />
</LinearLayout>