<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.driver.hire_me.SlideMainActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F5FFFA">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext"
                android:text="@string/Rider_notshown"
                android:textColor="@color/blue_color" />

            <Button
                android:id="@+id/cancel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cancel1"
                android:background="@drawable/edittext"
                android:text="@string/request_canceled"
                android:fontFamily="@string/buttom_fonts"
                android:textColor="@color/blue_color" />

            <Button
                android:id="@+id/cancel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cancel2"
                android:background="@drawable/edittext"
                android:text="@string/Wrong_Address"
                android:textColor="@color/blue_color" />

            <Button
                android:id="@+id/cancel4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cancel3"
                android:background="@drawable/edittext"
                android:text="@string/Other"
                android:textColor="@color/blue_color" />

            <EditText
                android:id="@+id/otheredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cancel4"
                android:background="@drawable/edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/reason_cancel"
                android:paddingRight="30dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/cancel5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/otheredit"
                android:background="@drawable/edittext"
                android:text="@string/Cancel_trip"
                android:textColor="@color/blue_color" />

            <Button
                android:id="@+id/cancel6"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/otheredit"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cancel4"
                android:layout_marginRight="20dp"
                android:background="@drawable/next"
                android:visibility="gone" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>