<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.driver.hire_me.GoOnlineActivity" >

     <LinearLayout
         android:id="@+id/goon"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="0dp"
         android:background="#ff6666"
         android:orientation="horizontal" >

         <Button
             android:id="@+id/account"
             android:layout_width="90dp"
             android:layout_height="match_parent"
             android:layout_weight="0.09"
             android:background="#ff6666"
             android:paddingLeft="5dp"
             android:text="@string/Account"
             android:textColor="#fff"
             android:textSize="14sp" />

         <TextView
             android:id="@+id/title1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="35dp"
             android:ellipsize="end"
             android:singleLine="false"
             android:text="@string/arcane"
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:textStyle="bold"/>

         <Button
             android:id="@+id/online"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
             android:layout_weight="0.37"
             android:background="#ff6666"
             android:text="@string/Go_Online"
             android:textColor="#fff"
             android:textSize="14sp" />
     </LinearLayout>

     <TextView
         android:id="@+id/uroffline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="93dp"
         android:gravity="center"
         android:text="@string/You_Offline"
         android:textColor="#ff6666"
         android:textSize="18dp"/>

     <Button
         android:id="@+id/online1"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="208dp"
         android:background="#ff6666"
         android:text="@string/Go_Online"
         android:textColor="#fff"
         android:textStyle="bold"/>

     <TextView
         android:id="@+id/vehicle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/online1"
         android:layout_alignRight="@+id/online1"
         android:layout_marginTop="270dp"
         android:gravity="center"
         android:text="@string/vehicle"
         android:textColor="#ff6666"
         android:textSize="18sp" />

</RelativeLayout>
