<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_bg">

    <com.custom.BEditText
        android:id="@+id/reemail"
        style="@style/EditTextStyle_Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginTop="170dp"
        android:hint="@string/email"
        app:btextfont="@string/RobotoCondensed"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textSize="14sp"
        android:paddingRight="50dp"
        android:textAllCaps="true"
        android:textColorHint="@color/hint_text_color">

    </com.custom.BEditText>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue_color">

        <com.custom.BTextView
            app:btextfont="@string/RobotoCondensed"
            android:id="@+id/textView14"
            style="@style/Header_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="12dp"
            android:text="@string/FORGOT_PASSWORD"
            android:textAllCaps="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!--    <Button
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:id="@+id/recancel"
                android:background="@drawable/arrowback"
                android:layout_alignParentTop="true"
               android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp" />-->

        <Button
            android:id="@+id/recancel"
            style="@style/Back_button_Style"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp" />

    </RelativeLayout>

    <com.custom.BTextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reemail"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="10dp"
        app:btextfont="@string/RobotoCondensed"
        android:layout_marginTop="20dp"
        android:text="@string/restore_your_password_via_email"
        android:textAllCaps="true"
        android:textColor="@color/blue_color"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/via_email"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/edit_text_color"
        android:textSize="15sp"
        android:visibility="gone" />

    <com.custom.BButton
        android:id="@+id/reset"
        app:btextfont="@string/RobotoCondensed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_color"
        android:text="@string/RESET_PASSWORD"
        android:textAllCaps="true"
        android:textColor="@color/blue_color"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>